--- a/事件代理.html
+++ b/事件代理.html
@@ -9,12 +9,14 @@
 
 <body>
   <div id="father">
-    <a id="child"></a>
+    <a id="child">123123</a>
+    <span>2345</span>
   </div>
 
   <script>
     const father = document.getElementById("father")
     father.addEventListener('click', function (e) {
+      console.log(e);
       if (e.target.tagName === 'A') {
         e.preventDefault()
         alert('这是子元素的点击事件' + e.target.value)
