--- a/观察订阅模式.html
+++ b/观察订阅模式.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-12-17 11:18:51
- * @LastEditTime: 2020-12-17 11:25:05
+ * @LastEditTime: 2020-12-17 11:45:56
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \project\designMode\观察订阅模式.html
@@ -34,13 +34,39 @@
         this.observers.push(observer)
         console.log('publisher add observer');
       };
-      notificate(str) {
+      notificate() {
+        console.log('Publisher.notify invoked');
         this.observers.forEach(item => {
-          item.update(str)
+          item.update(this)
         })
         console.log('publisher notification');
       }
     }
+    /**
+     * @description: 需求发布者
+     * @param {*}
+     * @return {*}
+     */
+    class PrdPublisher extends Publisher {
+      constructor() {
+        super()
+        this.prdState = null
+        this.observers = []
+        console.log('PrdPublisher created');
+      }
+
+      getState() {
+        console.log('PrdPublisher.getState invoked');
+        return this.prdState
+      }
+
+      setState(state) {
+        console.log('PrdPublisher.setState invoked');
+        this.prdState = state
+        this.notificate()
+      }
+    }
+
     /**
      * @description: 订阅者
      * @param {*}
@@ -51,7 +77,24 @@
         console.log('Observer is create');
       };
       update(str) {
-        console.log('receive msg' + str);
+        console.log('receive msg');
+      }
+    }
+
+    class DeveloperObserver extends Observer {
+      constructor() {
+        super()
+        this.prdState = {}
+        console.log('developerObserver created');
+      }
+      update(publisher) {
+        console.log('DeveloperObserver.update invoked');
+        this.prdState = publisher.getState()
+        this.work()
+      }
+      work() {
+        const prd = this.prdState
+        console.log('996 begins...');
       }
     }
   </script>
